After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667437 - Mutter's minimize animation ignores icon_geometry property
Mutter's minimize animation ignores icon_geometry property
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-01-06 20:04 UTC by Damien
Modified: 2012-03-13 18:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
A potential fix (1.26 KB, patch)
2012-01-06 20:04 UTC, Damien
none Details | Review
default plugin: animate minimization to icon geometry (1.79 KB, patch)
2012-03-13 18:14 UTC, Owen Taylor
committed Details | Review

Description Damien 2012-01-06 20:04:04 UTC
Created attachment 204777 [details] [review]
A potential fix

Wnck has a method that allows an icon geometry to be set (http://developer.gnome.org/libwnck/stable/WnckWindow.html#wnck-window-set-icon-geometry), but window minimization ignores this property and always animates into the top-left corner. This could be useful for providing custom window animations, such as when creating a system icon that a window could minimize to (media players, perhaps), but regardless of how it's used I don't believe Mutter should simply ignore this property.

I attached a potential fix that simply checks the window's icon geometry and adds the clutter "x" and "y" properties to the animation. I haven't tested it, though, so it may or may not work as expected.
Comment 1 Owen Taylor 2012-03-13 18:14:06 UTC
Created attachment 209633 [details] [review]
default plugin: animate minimization to icon geometry

I'm not completely sure that the behavior here when icon geometry is unset
is right - imagine minimizing a window on the right of a dual monitor setup
and it zooms off to the distant upper left. But we don't really maintain
the default plugin, so I'm OK making the change.

For future reference, please attach git commits formatted using
'git format-patch' rather than a plain diff with no commit information.
I'm attaching the commit as I'm pushing it with a commit message and
authorship information added.
Comment 2 Owen Taylor 2012-03-13 18:15:05 UTC
Attachment 209633 [details] pushed as 04bf73f - default plugin: animate minimization to icon geometry